name:             json-stream
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Zalora South East Asia Pte. Ltd
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
category:         JSON
cabal-version:    >= 1.10

source-repository head
  type: git
  location: https://github.com/zalora/json-stream

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Data.JSON.Stream
  build-depends:
      base == 4.*
    , bytestring
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , bytestring
    , json-stream
    , hspec >= 1.5
  default-language: Haskell2010
