name:             json-stream
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Zalora South East Asia Pte. Ltd
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
category:         JSON
cabal-version:    >= 1.10

source-repository head
  type: git
  location: https://github.com/zalora/json-stream

library
  ghc-options:
      -Wall -O2
  ghc-prof-options:
      -Wall -O2 -prof -auto-all
  hs-source-dirs:
      src
  exposed-modules:
      Data.JSON.Stream
  build-depends:
      base == 4.*
    , bytestring
    , text
    , aeson
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , json-stream
    , hspec >= 1.5
  default-language: Haskell2010

benchmark vs-aeson
  main-is:           vs-aeson.hs
  hs-source-dirs:    bench
  ghc-options:       -O2
  type:              exitcode-stdio-1.0
  build-depends:
      base >= 4 && < 5
    , aeson >= 0.8
    , bytestring >= 0.10
    , criterion
    , filepath
    , json-stream
  default-language:  Haskell2010

executable js-profile
  main-is:           js-profile.hs
  hs-source-dirs:    prof
  ghc-options:       -O2 -rtsopts
  ghc-prof-options:  -O2 -prof -auto -rtsopts
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10
    , json-stream
  default-language:  Haskell2010
